# internal/post/delivery/http/http.go
@@ -15,8 +15,8 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-//go:generate go run github.com/deepmap/oapi-codegen/cmd/oapi-codegen --config=../../../../../api/openapi/post/models.cfg.yml ../../../../../api/openapi/post/post.yml
-//go:generate go run github.com/deepmap/oapi-codegen/cmd/oapi-codegen --config=../../../../../api/openapi/post/server.cfg.yml ../../../../../api/openapi/post/post.yml
+//go:generate go run github.com/deepmap/oapi-codegen/cmd/oapi-codegen --config=../../../../api/openapi/post/models.cfg.yml ../../../../api/openapi/post/post.yml
+//go:generate go run github.com/deepmap/oapi-codegen/cmd/oapi-codegen --config=../../../../api/openapi/post/server.cfg.yml ../../../../api/openapi/post/post.yml
 
 func sendPostError(ctx echo.Context, code int, message string) error {
 	postErr := ErrorHTTP{
@@ -41,36 +41,36 @@ func (a *HttpServer) CreatePost(ctx echo.Context) error {
 
 	err := ctx.Bind(&post)
 	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, "Неправильный формат запроса")
+		return sendPostError(ctx, http.StatusBadRequest, "Incorrect request format")
 	}
 
 	headerAuth := ctx.Request().Header.Get("Authorization")
-	id := jwt.ClaimParse(headerAuth, "id")
+	userId := jwt.ClaimParse(headerAuth, "id")
 
-	uuids, err := uuid.Parse(id)
+	uuidUser, err := uuid.Parse(userId)
 	if err != nil {
 		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
 
 	postDTO := domain.Post{
-		UserID:     uuids,
-		Title:      post.Title,
-		Desciption: post.Description,
-		Price:      post.Price,
-		Tags:       post.Tag,
-		PathImages: post.PathImages,
+		UserID:      &uuidUser,
+		Title:       &post.Title,
+		Description: &post.Description,
+		Price:       &post.Price,
+		Category:    &post.Category,
+		PathImages:  &post.PathImages,
 	}
 
-	err = a.command.CreatePost.Handle(context.Background(), postDTO)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	uuidPost, wrappErr := a.command.CreatePost.Handle(context.Background(), postDTO)
+	if wrappErr.Error != nil {
+		return sendPostError(ctx, wrappErr.HTTPStatusCode, wrappErr.Error.Error())
 	}
 
-	return ctx.JSON(http.StatusCreated, "Ok")
+	return ctx.JSON(http.StatusCreated, uuidPost)
 }
 
 func (a *HttpServer) UpdatePost(ctx echo.Context, id string) error {
-	var post CreatePost
+	var post EditPost
 
 	err := ctx.Bind(&post)
 	if err != nil {
@@ -82,57 +82,44 @@ func (a *HttpServer) UpdatePost(ctx echo.Context, id string) error {
 
 	uuidUser, err := uuid.Parse(idUser)
 	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+		return sendPostError(ctx, http.StatusBadRequest, err.Error())
 	}
 
 	uuidPost, err := uuid.Parse(id)
 	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+		return sendPostError(ctx, http.StatusBadRequest, err.Error())
 	}
 
 	postDTO := domain.Post{
-		UserID:     uuidUser,
-		Title:      post.Title,
-		Desciption: post.Description,
-		Price:      post.Price,
-		Tags:       post.Tag,
-		PathImages: post.PathImages,
+		Id:          &uuidPost,
+		UserID:      &uuidUser,
+		Title:       post.Title,
+		Description: post.Description,
+		Price:       post.Price,
+		Category:    post.Category,
+		PathImages:  post.PathImages,
 	}
 
-	err = a.command.UpdatePost.Handle(context.Background(), uuidPost, postDTO)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	wrappErr := a.command.UpdatePost.Handle(context.Background(), postDTO)
+	if wrappErr.Error != nil {
+		return sendPostError(ctx, wrappErr.HTTPStatusCode, wrappErr.Error.Error())
 	}
 
-	return ctx.JSON(http.StatusCreated, "Ok")
+	return ctx.NoContent(http.StatusNoContent)
 }
 
 func (a *HttpServer) DeletePost(ctx echo.Context, id string) error {
 	uuidPost, err := uuid.Parse(id)
 	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+		return sendPostError(ctx, http.StatusBadRequest, err.Error())
 	}
 
-	err = a.command.DeletePost.Handle(context.Background(), uuidPost)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	wrapErr := a.command.DeletePost.Handle(context.Background(), uuidPost)
+	if wrapErr.Error != nil {
+		return sendPostError(ctx, http.StatusBadRequest, err.Error())
 	}
 
-	return ctx.JSON(http.StatusCreated, "Ok")
-}
-
-func (a *HttpServer) ClosePost(ctx echo.Context, userId string, id string) error {
-	uuidPost, err := uuid.Parse(id)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
-	}
-
-	err = a.command.ClosePost.Handle(context.Background(), uuidPost)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
-	}
-
-	return ctx.JSON(http.StatusCreated, "Ok")
+	return ctx.NoContent(http.StatusNoContent)
 }
 
 func (a HttpServer) FindPostByID(ctx echo.Context, id string) error {
@@ -146,78 +133,22 @@ func (a HttpServer) FindPostByID(ctx echo.Context, id string) error {
 		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
 
-	result := Post{
-		Tag:         resultDTO.Tags,
-		Close:       resultDTO.Close,
-		Description: resultDTO.Desciption,
-		PathImages:  resultDTO.PathImages,
-		Price:       resultDTO.Price,
-		Title:       resultDTO.Title,
+	result := FullPost{
+		Category:    *resultDTO.Category,
+		Status:      *resultDTO.Status,
+		Description: *resultDTO.Description,
+		PathImages:  *resultDTO.PathImages,
+		Price:       *resultDTO.Price,
+		Title:       *resultDTO.Title,
 		UserId:      resultDTO.UserID.String(),
-		Views:       resultDTO.Views,
+		Views:       *resultDTO.Views,
 	}
 
 	return ctx.JSON(http.StatusCreated, result)
 }
 
-func (a HttpServer) FindOpenPostByUserID(ctx echo.Context, idUser string, page int) error {
-	uuidUser, err := uuid.Parse(idUser)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
-	}
-
-	resultDTO, err := a.query.GetUserIdOpenPost.Handle(context.Background(), uuidUser, page)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
-	}
-
-	var result []Post
-	for _, post := range resultDTO {
-		p := Post{
-			Close:       post.Close, // В реальности надо сделать не обязательныим полем
-			Description: post.Desciption,
-			PathImages:  post.PathImages,
-			Price:       post.Price,
-			Title:       post.Title,
-			UserId:      post.UserID.String(),
-			Views:       post.Views,
-		}
-		result = append(result, p)
-	}
-
-	return ctx.JSON(http.StatusOK, result)
-}
-
-func (a HttpServer) FindClosePostByUserID(ctx echo.Context, idUser string, page int) error {
-	uuidUser, err := uuid.Parse(idUser)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
-	}
-
-	resultDTO, err := a.query.GetUserIdClosePost.Handle(context.Background(), uuidUser, page)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
-	}
-
-	var result []Post
-	for _, post := range resultDTO {
-		p := Post{
-			Close:       post.Close, // В реальности надо сделать не обязательныим полем
-			Description: post.Desciption,
-			PathImages:  post.PathImages,
-			Price:       post.Price,
-			Title:       post.Title,
-			UserId:      post.UserID.String(),
-			Views:       post.Views,
-		}
-		result = append(result, p)
-	}
-
-	return ctx.JSON(http.StatusOK, result)
-}
-
-func (a HttpServer) FindPostByTag(ctx echo.Context, tag string, page int) error {
-	resultDTO, err := a.query.GetTagPost.Handle(context.Background(), tag, page)
+func (a HttpServer) GetMiniPost(ctx echo.Context, params GetMiniPostParams) error {
+	resultDTO, err := a.query.GetSortNewPost.Handle(context.Background(), 1)
 	if err != nil {
 		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
@@ -226,33 +157,11 @@ func (a HttpServer) FindPostByTag(ctx echo.Context, tag string, page int) error 
 	for _, post := range resultDTO {
 		p := MiniPost{
 			PostId:     post.Id.String(),
-			PathImages: post.PathImages,
-			Price:      post.Price,
-			Title:      post.Title,
+			PathImages: *post.PathImages,
+			Price:      *post.Price,
+			Title:      *post.Title,
 			UserId:     post.UserID.String(),
-			Views:      post.Views,
-		}
-		result = append(result, p)
-	}
-
-	return ctx.JSON(http.StatusOK, result)
-}
-
-func (a HttpServer) GetAllPost(ctx echo.Context, page int) error {
-	resultDTO, err := a.query.GetSortNewPost.Handle(context.Background(), page)
-	if err != nil {
-		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
-	}
-
-	var result []MiniPost
-	for _, post := range resultDTO {
-		p := MiniPost{
-			PostId:     post.Id.String(),
-			PathImages: post.PathImages,
-			Price:      post.Price,
-			Title:      post.Title,
-			UserId:     post.UserID.String(),
-			Views:      post.Views,
+			Views:      *post.Views,
 		}
 		result = append(result, p)
 	}
@@ -331,11 +240,11 @@ func (a HttpServer) GetCart(ctx echo.Context) error {
 	for _, post := range resultDTO {
 		p := MiniPost{
 			PostId:     post.Id.String(),
-			PathImages: post.PathImages,
-			Price:      post.Price,
-			Title:      post.Title,
+			PathImages: *post.PathImages,
+			Price:      *post.Price,
+			Title:      *post.Title,
 			UserId:     post.UserID.String(),
-			Views:      post.Views,
+			Views:      *post.Views,
 		}
 		result = append(result, p)
 	}
@@ -415,11 +324,11 @@ func (a HttpServer) GetFavorite(ctx echo.Context) error {
 	for _, post := range resultDTO {
 		p := MiniPost{
 			PostId:     post.Id.String(),
-			PathImages: post.PathImages,
-			Price:      post.Price,
-			Title:      post.Title,
+			PathImages: *post.PathImages,
+			Price:      *post.Price,
+			Title:      *post.Title,
 			UserId:     post.UserID.String(),
-			Views:      post.Views,
+			Views:      *post.Views,
 		}
 		result = append(result, p)
 	}
@@ -447,11 +356,11 @@ func (a HttpServer) Search(ctx echo.Context, params SearchParams) error {
 	for _, post := range resultDTO {
 		p := MiniPost{
 			PostId:     post.Id.String(),
-			PathImages: post.PathImages,
-			Price:      post.Price,
-			Title:      post.Title,
+			PathImages: *post.PathImages,
+			Price:      *post.Price,
+			Title:      *post.Title,
 			UserId:     post.UserID.String(),
-			Views:      post.Views,
+			Views:      *post.Views,
 		}
 		result = append(result, p)
 	}
