# internal/post/domain/dto.go
@@ -7,14 +7,23 @@ import (
 )
 
 type Post struct {
-	Id         uuid.UUID
-	UserID     uuid.UUID
-	Close      bool
-	Title      string
-	Desciption string
-	Price      string
-	Tags       string
-	PathImages []string
-	Time       time.Time
-	Views      int
+	Id          *uuid.UUID
+	UserID      *uuid.UUID
+	Status      *bool
+	Title       *string
+	Description *string
+	Price       *string
+	Category    *string
+	PathImages  *[]string
+	Time        *time.Time
+	Views       *int
+}
+
+type Parameters struct {
+	Offset   *int
+	Limit    *int
+	Status   *bool
+	Sort     *string
+	UserId   *uuid.UUID
+	Category *string
 }
